Read actual classpath from bazel; simplify link strategy